Fixing header layout issue.

--- a/app/assets/stylesheets/admin/layout.css.scss
+++ b/app/assets/stylesheets/admin/layout.css.scss
@@ -13,6 +13,8 @@ header {
 
   h1 {
     @include float-left;
+    @include sans(18px);
+    margin: 0;
   }
 
   nav {
